# Sparse_GEMV

./: CMakeLists.txt  README.md  benchmark_log.csv  draw.py  push.sh
android/: README.md  toolchain.cmake
build_android/: CMakeCache.txt  Makefile  cmake_install.cmake  inner_product_cpu  inner_product_gpu
src/: main.cpp
src/cpu/: dense_gemv_cpu.cpp  dense_gemv_cpu.h  inner_product_cpu.cpp  inner_product_cpu.h
src/gpu/: csr_spvec_dot.cl  dense_gemv_opencl.cpp  dense_gemv_opencl.h  inner_product_opencl.cpp  inner_product_opencl.h
src/types/: sparse_types.h
